--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "dotenv": "^16.1.4",
     "dotenv-cli": "^7.2.1",
     "dotenv-safe": "^8.2.0",
-    "lay": "^0.0.1",
     "ley": "^0.8.1",
     "next": "13.4.3",
     "postgres": "^3.3.5",
@@ -22,11 +21,13 @@
     "react-dom": "18.2.0",
     "sass": "^1.62.1",
     "secure-json-parse": "^2.7.0",
+    "server-only": "^0.0.1",
     "sharp": "^0.32.1",
     "tsm": "^2.3.0"
   },
   "devDependencies": {
     "@ts-safeql/eslint-plugin": "^1.1.3",
+    "@types/dotenv-safe": "^8.1.2",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "eslint-config-upleveled": "^4.5.0",
